# overseer

./: .gitignore  .project  CMakeLists.txt  LICENCE.md  README.md  build.gradle  overseer_check.html  overseer_check.py  settings.gradle
deploy/: INSTALL  INSTALL.txt  force-unison-install.sh  package.sh  upgrade_and_launch_plasmoid.sh
plasmoid/: metadata.desktop
plasmoid/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  OverseerSocket.qml  main.qml
res/: one-jar.properties
src/main/java/com/jsankey/overseer/: CommandEvent.java  CommandHistory.java  CommandRunner.java  Configuration.java  ExecutionHistory.java  Executive.java  OverseerApplication.java  SocketConnection.java  SocketService.java  WifiStatusChecker.java
src/main/java/com/jsankey/overseer/checks/: WifiStatusChecker.java
src/main/java/com/jsankey/overseer/history/: CommandEvent.java  CommandHistory.java  ExecutionHistory.java
src/main/java/com/jsankey/overseer/io/: Command.java  ConnectionParser.java  SocketConnection.java  SocketService.java  TextConnectionParser.java  WebConnectionParser.java
src/main/java/com/jsankey/overseer/runner/: CommandRunner.java
src/main/java/com/jsankey/util/: BriefTextFormatter.java  ReadOnlyIterator.java
src/test/java/com/jsankey/overseer/: CommandRunnerTest.java  ConfigurationTest.java  ExecutionHistoryTest.java  WifiStatusCheckerTest.java
src/test/java/com/jsankey/overseer/checks/: WifiStatusCheckerTest.java
src/test/java/com/jsankey/overseer/history/: ExecutionHistoryTest.java
src/test/java/com/jsankey/overseer/io/: SocketServiceTest.java  (+1 more)
(+1 files in other folders)
